--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -16,7 +16,7 @@
           crossorigin="anonymous"/>
     <!-- CSS -->
     <link rel="stylesheet"
-          href="/assets/css/landing.css"/>
+          href="{{ site.baseurl }}/assets/css/landing.css"/>
   </head>
   <body>
     {{ content }}
