use relative_url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
     <div class="col-md-7 footer-logo">
       <a href="http://www.umd.edu">
         <img style="width: 219px"
-             src="/assets/images/umd_logo_footer.png"
+             src="{{ '/assets/images/umd_logo_footer.png' | relative_url }}"
              alt="University of Maryland">
       </a>
       <a href="http://www.nsf.gov">
         <img style="width: 301px"
-             src="/assets/images/nsf_logo_footer.png"
+             src="{{ '/assets/images/nsf_logo_footer.png' | relative_url }}"
              alt="National Science Foundation">
       </a>
     </div>
