--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,6 +6,6 @@ layout: default
 
 {% for post in site.categories[page.slug] %}
 <div class="post {{ post.category }}">
-  <a href="{{ post.url }}">{{ post.title }}</a>
+  <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
 </div>
 {% endfor %}
