--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
     {% seo %}
+    
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -26,12 +27,15 @@
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(gcse, s);
       })();
-</script>
+    </script>
 
   </head>
   <body>
 
     <header>
+      <a href="https://www.sesync.org">
+        <img src="{{ '/assets/images/background.png' | relative_url }}">
+      </a>
       {% if page.category %}
         {% include title.html category=page.category %}
       {% else %}
@@ -54,8 +58,7 @@
         <strong>Lessons</strong>
       </a>
       <div id="search-box">
-        <gcse:searchbox-only resultsUrl="{{ '/search.html' | relative_url }}">
-        </gcse:searchbox-only>
+        <gcse:searchbox-only resultsUrl="{{ '/search.html' | relative_url }}"/>
       </div>
     </div>
 
@@ -88,10 +91,10 @@
       </tags>
       {% endif %}
       <footer>
-        <p>Project maintained by <a
-          href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
+        <p>Project maintained by
+          <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
         </p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a
+        <p><small>Hosted on GitHub Pages<br>theme by <a
           href="https://twitter.com/michigangraham">mattgraham</a></small>
         </p>
       </footer>
