--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,8 +88,8 @@
       {% endif %}
       <footer>
         <p>
-          <a href="{{ site.github.repository_url }}/tree/master/{{ page.path }}">
-            <i class="fa fa-pencil" aria-hidden="true"></i>Edit this page
+          <a href="{{ site.github.repository_url }}/blob/master/{{ page.path }}">
+            <i class="fa fa-pencil" aria-hidden="true"></i> Edit this page
           </a>
         </p>
         <p>Site maintained by
