--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,8 @@
       {% endif %}
       <footer>
         <p>
-          <a href="{{ site.github.repository_url }}/blob/master/{{ page.path }}">
+          <a href="{{ site.github.repository_url }}/blob/master/{{ page.path }}"
+             target="_blank">
             <i class="fa fa-pencil" aria-hidden="true"></i> Edit this page
           </a>
         </p>
