--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,10 +23,13 @@ header {
     }
 }
 
-@media screen and (max-width: 800px) {
-    header img {
-        visibility: hidden;
+@media print, screen and (max-width: 1060px) {
+    footer {
+        bottom: 0px;
     }
+#    header img {
+#        visibility: hidden;
+#    }
 }
 
 body {
@@ -35,7 +38,7 @@ body {
 }
 
 footer {
-    width: 180px;
+    width: 160px;
     position: fixed;
     left: 50%;
     margin-left: 350px;
