--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@ body {
 footer {
     width: 160px;
     position: fixed;
+    bottom: 0px;
     left: 50%;
     margin-left: 350px;
     text-align: left;
