--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,10 +16,10 @@ header {
         color: #666;
     }
     img {
-        position: fixed;
-        top: 10px;
-        left: 6px;
-        max-height: 7em;
+        position: absolute;
+        left: 4%;
+        margin: auto;
+        max-width: 20%;
     }
 }
 
