--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,12 @@ header {
     }
 }
 
+@media print, screen and (max-width: 680px) {
+    header img {
+        display: none;
+    }
+}
+
 body {
     background-image: unset;
     background-color: $color-grey;
