--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
   <body>
 
     <header>
-      <a href="https://www.sesync.org">
         <img src="{{ '/assets/images/background.png' | relative_url }}">
-      </a>
+      <!--<a href="https://www.sesync.org">
+      </a>-->
       {% if page.category %}
         {% include title.html category=page.category %}
       {% else %}
