--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -35,6 +35,8 @@
         $("#fullpage").fullpage({
           navigation: true,
           navigationPosition: "right",
+          showActiveTooltip: true,
+          css3: false,
         });
       });
     </script>    
