--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,6 +1,14 @@
 {% case include.category %}
-{% when "quickstart" %}<h1>Quick Start</h1><h2>guides to get you going</h2>
-{% when "FAQ" %}<h1>FAQ</h1><h2>(Frequently Asked Questions)</h2>
-{% when "blog" %}<h1>The CyBlog</h1><h2>tips & tricks from CI staff</h2>
-{% when "lessons" %}<h1>Lessons</h1><h2>teach yourself to do reproducible research</h2>
+{% when 'quickstart' %}
+  <h1>Quick Start</h1>
+  <h2>guides to get you going</h2>
+{% when 'FAQ' %}
+  <h1>FAQ</h1>
+  <h2>(Frequently Asked Questions)</h2>
+{% when 'blog' %}
+  <h1>The CyBlog</h1>
+  <h2>tips & tricks from CI staff</h2>
+{% when 'lessons' %}
+  <h1>Lessons</h1>
+  <h2>teach yourself to do reproducible research</h2>
 {% endcase %}
