--- a/_includes/title.html
+++ b/_includes/title.html
@@ -10,5 +10,5 @@
   <h2>tips & tricks from CI staff</h2>
 {% when 'lessons' %}
   <h1>Lessons</h1>
-  <h2>teach yourself to do reproducible research</h2>
+  <h2>reproducible research tutorials</h2>
 {% endcase %}
