--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ header {
     }
     img {
         position: absolute;
-        padding: inherit;
+        padding: 25px 20px 40px 20px;
         left: 0;
         top: 0;
         height: calc(100% - 25px - 40px);
