--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -24,7 +24,7 @@ img {
 }
 
 .fp-tableCell {
-    padding-right: 15%;
+    padding-right: 220px;
 }
 
 .first.section{
@@ -58,15 +58,6 @@ img {
     margin: 12px;
 }
 
-#fp-nav ul li::marker{
-    text-decoration: blink;
-  	-webkit-animation-name: blinker;
-	  -webkit-animation-duration: 0.6s;
-  	-webkit-animation-iteration-count:infinite;
-	  -webkit-animation-timing-function:ease-in-out;
-	  -webkit-animation-direction: alternate;
-}
-
 #fp-nav ul li a span {
     background: $color-primary;
 }
@@ -76,9 +67,9 @@ img {
     font-size: 1.8em;
     text-shadow:
       -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-      1px 1px 0 #000;
+       1px -1px 0 #000,
+      -1px  1px 0 #000,
+       1px  1px 0 #000;
 }
 
 .downArrow {
@@ -97,12 +88,12 @@ img {
     0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
     }
-	  40% {
+    40% {
         transform: translateY(-30px);
     }
     60% {
         transform: translateY(-15px);
-  }
+    }
 }
 
 #quickstart {
