--- a/_includes/title.html
+++ b/_includes/title.html
@@ -2,7 +2,7 @@
 {% when 'quickstart' %}
   <h1>Quick Start</h1>
   <h2>guides to get you going</h2>
-{% when 'FAQ' %}
+{% when 'faq' %}
   <h1>FAQ</h1>
   <h2>(Frequently Asked Questions)</h2>
 {% when 'blog' %}
