--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,7 +4,8 @@ layout: default
 
 {{ content }}
 
-{% for post in site.categories[page.category] %}
+{% assign category = page.slug %}
+{% for post in site.categories[category] %}
 <div class="post {{ post.category }}">
   <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
 </div>
