--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,12 +59,11 @@ li {
 }
 
 h1 {
-    margin: 0 0 1em;
+#    margin: 0 0 1em;
 }
 
 h3 {
-    margin: 0 0 0.6em 0;
-    padding-left: 0.6em;
+#    margin: 0 0 0.6em 0;
 }
 
 nav ul li.tag-h1 a {
@@ -90,19 +89,19 @@ tags {
     left: 50%;
     margin-left: 350px;
     text-align: left;
-    h1 {
-        font-size: 20px;
+    h3 {
+        font-size: 18px;
         font-family: proxima_nova_ltsemibold;
         color: white;
     }
     ul {
-        font-size: 12px;
-        line-height: 24px;
+        font-size: 10px;
+        line-height: 20px;
         list-style: none;
         padding: 0px;
     }
     a > strong {
-        font-size: 18px;
+        font-size: 16px;
         color: $color-primary;
     }
 }
