--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -100,7 +100,7 @@ img {
     background-image: url("{{ 'assets/images/grey_puzzle_piece.jpg' | relative_url }}");
 }
 
-#FAQ {
+#faq {
     background-image: url("{{ 'assets/images/question-mark-1872665.jpg' | relative_url }}");
 }
 
