--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
     <div class="wrapper">
       {% if page.toc %}<nav><ul></ul></nav>{% endif %}
       <section>
+        <h1>{{ page.title }}</h1>
         {{ content }}
       </section>
       {% if page.tags.size > 0 %}
