--- a/assets/css/_sesync.scss
+++ b/assets/css/_sesync.scss
@@ -1,13 +1,13 @@
-/* paletton.com base RGB BE5045 */
-$color-primary: #BE5045;
-$color-primary-light: #FFB6AF;
-$color-primary-trim: #E68277;
-$color-primary-accent: #9D3024;
+/* paletton.com base RGB be5045 */
+$color-primary: #be5045;
+$color-primary-light: #ffb6af;
+$color-primary-trim: #e68277;
+$color-primary-accent: #9d3024;
 $color-primary-dark: #711107;
 
 $color-blue: #438cbb;
 $color-grey: #2a2e31;
-$color-light-grey: #595757;
+$color-light-grey: #aaa7a7;
 
 /* Banners */
 #footer {
