--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -5,12 +5,11 @@
 
 body {
     background-color: black;
-    text-align: right;
 }
 
 img {
-    max-width: 100%;
     max-height: 100%;
+    max-width: 100%;
 }
 
 .section {
@@ -24,41 +23,38 @@ img {
 }
 
 .fp-tableCell {
+    display: flex;
+    align-content: center;
+    flex-flow: row wrap;
     padding-right: 220px;
 }
 
-.first.section{
-    text-align: center;
-}
-
-.fp-tableCell > div {
-    display: inline-block;
-    vertical-align: top;
-    margin: 20px;
-    padding: 20px;
-    max-width: 420px;
-    text-align: left;
-    font-family: proxima_nova_rgbold;
-    background-color: black;
+.first.section {
+    .fp-tableCell {
+        align-items: center;
+    }
+    div {
+        flex: 1 1 50%;
+        padding: 40px;
+    }
 }
 
 .fp-tableCell > div.preview {
-    width: 220px;
-    height: 290px;
-    border-radius: 4px;
-    background-color: block;
-    overflow: hidden;
-    text-color: $color-light-grey;
-    
+    flex: 0 1 320px;
+    margin: 20px;
+    padding: 40px;
+    text-align: left;
+    font-family: proxima_nova_rgbold;
+    background-color: black;
+    border-radius: 8px;
+    color: $color-light-grey;
     a {
-      font-size: 150%;
-      color: white;
+        font-size: 150%;
+        color: white;
     }
-    a::before {
-      content: "";
-      width: 100%;
-      height: 100%;    
-      background: linear-gradient(transparent 50%, black);
+    p > a {
+      font-size: inherit;
+      color: inherit;
     }
 }
 
@@ -84,7 +80,8 @@ img {
        1px  1px 0 #000;
 }
 
-.downArrow {
+#downArrow {
+    padding: 0px;
     position: fixed;
     bottom: 0;
     left: 50%;
@@ -122,4 +119,10 @@ img {
 
 #lessons {
     background-image: url("{{ 'assets/images/Data_Center.jpg' | relative_url }}");
+}
+
+#about {
+    .fp-tableCell {
+        padding-right: 0px;
+    }
 }
