--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,9 @@ header {
     footer {
         bottom: 0px;
     }
+    #search-box {
+        margin: 0 300px 0 0;
+    }
 }
 
 @media print, screen and (max-width: 680px) {
