--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -20,6 +20,9 @@ layout: default
 {% assign posts = site.categories[category] | where: 'sticky',false %}
 {% for post in posts %}
 <div class="post {{ post.category }}">
+  {% if post.category == 'blog' %}
+    {{ post.date | date: '%B %d, %Y' }}&mdash;
+  {% endif %}
   <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
   {% if post.category == 'lessons' %}
     &mdash; {{ post.excerpt | strip_html }}
