--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,9 @@
       {% if page.toc %}<nav><ul></ul></nav>{% endif %}
       <section>
         <h1>{{ page.title }}</h1>
+	{% if page.category == 'blog' %}
+	<strong>{{ page.date | date: '%B %d, %Y'}} by [@{{ page.author }}](https://github.com/{{ page.author}})</strong>
+	{% endif %}
         {{ content }}
       </section>
       {% if page.tags.size > 0 %}
