--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,9 @@
       <section>
         <h1>{{ page.title }}</h1>
 	{% if page.category == 'blog' %}
-	<strong>{{ page.date | date: '%B %d, %Y'}} by [@{{ page.author }}](https://github.com/{{ page.author}})</strong>
+	<strong>{{ page.date | date: '%B %d, %Y'}} by
+	  <a href="https://github.com/{{ page.author }}">@{{ page.author }}</a>
+	</strong>
 	{% endif %}
         {{ content }}
       </section>
