--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,10 +64,10 @@
       {% if page.toc %}<nav><ul></ul></nav>{% endif %}
       <section>
         <h1>{{ page.title }}</h1>
-	{% if page.category == 'blog' %}
-	<strong>{{ page.date | date: '%B %d, %Y'}} by
+	{% if page.author %}
+	<p><strong>{{ page.date | date: '%B %d, %Y'}} by
 	  <a href="https://github.com/{{ page.author }}">@{{ page.author }}</a>
-	</strong>
+	</strong></p>
 	{% endif %}
         {{ content }}
       </section>
