--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="{{ site.lang | default: en-US }}">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-24906765-5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-24906765-5');
+    </script>
+
     <!-- Original downloaded from https://github.com/pages-themes/leap-day/blob/2c15b7c092971aa8af0e2752d562dd5ecad7d0f2/_layouts/default.html
     on 2017-10-09. Subsequently modified by Ian Carroll <icarroll@sesync.org>. -->
     <meta charset="utf-8">
