--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -125,6 +125,7 @@ tags {
         border: 0.5px solid;
         border-color: $color-primary-dark;
         box-shadow: 0px 0px 1px 0px black;
+        margin-top: 7px;
     }
     .button:hover {
         background-color: $color-primary-light;
@@ -138,7 +139,11 @@ tags {
 #search-box {
     max-width: 300px;
     float: right;
-    margin: 0 -50px 0 0;
+    margin: 6px -10px 0 0;
+    table {
+        margin: 0px;
+    }
+    
     td {
         border: none;
     }
