--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -139,9 +139,10 @@ tags {
 #search-box {
     max-width: 300px;
     float: right;
-    margin: 6px -10px 0 0;
+    margin: 0 -10px 0 0;
     table {
-        margin: 0px;
+        margin: 0;
+        height: 39px;
     }
     
     td {
