transition to nextcloud

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -114,6 +114,13 @@ tags {
     }
 }
 
+.doc-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
 #banner {
     background-color: $color-primary;
     border: none;
