ready to merge with master for "testing"

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,6 +121,10 @@ tags {
     width: 60%;
 }
 
+.doc-inline-img {
+    height: 1em;
+}
+
 #banner {
     background-color: $color-primary;
     border: none;
