--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,9 +85,10 @@
         <h3>Related <i class="fa fa-tags" aria-hidden="true"></i></h3>
         <ul>
           {% for tag in page.tags %}
+	    {% assign tag_page = site.documents | where: "slug", tag | first %}
             <li>
-              <a href="{{ tag | prepend: '/tag/' | relative_url }}">
-                <strong>{{ tag }} </strong>
+              <a href="{{ tag_page.url }}">
+                <strong>{{ tag_page.title }} </strong>
               </a>
               <span class="fa-stack fa-lg">
                 <i class="fa fa-tag fa-stack-2x" aria-hidden="true"></i>
