more table styles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,6 +63,10 @@ td {
     }
 }
 
+th {
+    border-bottom-color: $color-primary-trim;
+    {
+
 hr {
     background: $color-primary-trim;
     height: 2px;
