--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,8 +53,8 @@ li {
     margin: 0px;
 }
 
-tr {
-    nth-child(even) {background-color: $color-light-grey}
+tr: nth-child(even) {
+    background-color: $color-light-grey
 }
 
 th {
