--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col-md-7">
       SESYNC is supported by an award from the US National Science
-      Foundation (Grant # DBI-1052875) to the University of
+      Foundation (Grant #s DBI-1052875 and DBI-1639145) to the University of
       Maryland, with additional support from University of Maryland,
       University of Maryland Center for Environmental Science, and
       Resources for the Future.
