--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@
         <p>
           <a href="{{ site.github.repository_url }}/blob/master/{{ page.path }}"
              target="_blank">
-            <i class="fa fa-pencil" aria-hidden="true"></i> Edit this page
+            <i class="fas fa-pencil-alt" aria-hidden="true"></i> Edit this page
           </a>
         </p>
         <p>Site maintained by
