--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,8 @@
     </script>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
-    {% seo %}
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    {% seo title=false %}
     <link rel="stylesheet"
           href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"/>
     <link rel="stylesheet"
