--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -134,7 +134,7 @@ body {
     }
 }
 
-#lessons {
+#lesson {
     background-image: url("{{ 'assets/images/Data_Center.jpg' | relative_url }}");
     .preview.more {
         background-color: #a307b6;
