--- a/assets/css/_sesync.scss
+++ b/assets/css/_sesync.scss
@@ -1,9 +1,9 @@
 /* paletton.com base RGB be5045 */
-$color-primary: #be5045;
-$color-primary-light: #ffb6af;
-$color-primary-trim: #e68277;
-$color-primary-accent: #9d3024;
-$color-primary-dark: #711107;
+$color-primary: #6b507d;
+$color-primary-light: #877296;
+$color-primary-trim: #ADA0B7;
+$color-primary-accent: #543767;
+$color-primary-dark: #3F2154;
 
 $color-blue: #438cbb;
 $color-grey: #2a2e31;
