--- a/assets/css/_sesync.scss
+++ b/assets/css/_sesync.scss
@@ -1,4 +1,4 @@
-/* paletton.com base RGB be5045 */
+/* paletton.com base RGB 6b507d */
 $color-primary: #6b507d;
 $color-primary-light: #877296;
 $color-primary-trim: #ADA0B7;
