--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -108,7 +108,7 @@ pre code {
     padding: 0px;
     a > strong {
         font-size: 16px;
-        color: $color-primary;
+        color: $color-blue;
     }
 }
 
