landing page navigation tooltips

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -44,7 +44,7 @@
         jQuery("#fullpage").fullpage({
           navigation: true,
           navigationPosition: "right",
-          showActiveTooltip: true,
+          showActiveTooltip: false,
           css3: false,
         });
       });
