blogpost on carbon footprint live, fix unclosed tags in layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
 			{% else %}
 					<a rel="author" href="https://github.com/{{ author_name.github }}" title="{{ author_name.full_name }}">{{ author_name.full_name }}</a>
 			{% endif %}
+		</strong></p>
 		{% endif %}
 		<!-- Multiple authors -->
       	{% if page.authors %}
